--- a/public/style.css
+++ b/public/style.css
@@ -64,3 +64,46 @@ body {
   pointer-events: initial;
   transition: all 0.5s ease-in;
 }
+.my-modal {
+  overflow: hidden;
+  background: rgb(255, 255, 255);
+  box-shadow: rgb(14 14 44 / 10%) 0px 20px 36px -8px, rgb(0 0 0 / 5%) 0px 1px 1px;
+  border: 1px solid rgb(231, 227, 235);
+  border-radius: 32px;
+  width: 100%;
+  max-height: 100vh;
+  z-index: 100;
+}
+.my-modal > p {
+  -webkit-box-align: center;
+  align-items: center;
+  background: transparent;
+  border-bottom: 1px solid rgb(231, 227, 235);
+  display: flex;
+  padding: 12px 24px;
+}
+.my-modal > div {
+  -webkit-box-align: center;
+  align-items: center;
+  border: 0px;
+  border-radius: 16px;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 600;
+  -webkit-box-pack: center;
+  justify-content: space-between;
+  letter-spacing: 0.03em;
+  line-height: 1;
+  opacity: 1;
+  outline: 0px;
+  transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+  height: 48px;
+  padding: 0px 24px;
+  background-color: rgb(237, 235, 241);
+  box-shadow: none;
+  color: rgb(98, 54, 255);
+  width: 100%;
+  margin-bottom: 0px;
+}
