--- a/public/style.css
+++ b/public/style.css
@@ -64,25 +64,48 @@ body {
   pointer-events: initial;
   transition: all 0.5s ease-in;
 }
+.c {
+  margin: 0 20px;
+}
 .my-modal {
+  z-index: 100;
+  position: fixed;
+  top: 18%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 320px;
+}
+.my-modal .content {
   overflow: hidden;
+  max-height: 100vh;
   background: rgb(255, 255, 255);
   box-shadow: rgb(14 14 44 / 10%) 0px 20px 36px -8px, rgb(0 0 0 / 5%) 0px 1px 1px;
   border: 1px solid rgb(231, 227, 235);
   border-radius: 32px;
-  width: 100%;
-  max-height: 100vh;
-  z-index: 100;
 }
-.my-modal > p {
+.my-modal .content a {
+  margin-bottom: 24px;
+  font-size: 14px;
+  color: rgb(98, 54, 255);
+  font-weight: 600;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+.my-modal .content > p {
   -webkit-box-align: center;
   align-items: center;
   background: transparent;
   border-bottom: 1px solid rgb(231, 227, 235);
   display: flex;
   padding: 12px 24px;
+  font-size: 20px;
+  font-weight: 600;
 }
-.my-modal > div {
+.my-modal .content > div {
+  padding: 24px;
+}
+.my-modal .content > div > div {
   -webkit-box-align: center;
   align-items: center;
   border: 0px;
@@ -105,5 +128,5 @@ body {
   box-shadow: none;
   color: rgb(98, 54, 255);
   width: 100%;
-  margin-bottom: 0px;
+  margin-bottom: 8px;
 }
