--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "Kanit", sans-serif;
   background-color: #f2f2f5 !important;
 }
+
 * {
   padding: 0;
   margin: 0;
@@ -13,17 +14,21 @@ body {
   background: rgba(98, 54, 255, 0.55) !important;
   border-radius: 8px !important;
 }
+
 ::-webkit-scrollbar-track {
   box-shadow: rgb(255 255 255) 0px 0px 20px inset !important;
   border-radius: 10px !important;
 }
+
 ::-webkit-scrollbar {
   width: 8px !important;
 }
+
 #root {
   position: relative;
   width: 100%;
 }
+
 .card-shadow {
   background-color: #ffffff;
   border-radius: 24px;
@@ -34,23 +39,29 @@ body {
 
   position: relative;
 }
-.card-shadow > div {
+
+.card-shadow>div {
   padding: 24px;
 }
+
 .title {
   font-size: 40px;
   font-weight: 600;
 }
+
 .title2 {
   font-size: 24px;
   font-weight: 600;
 }
+
 .c-purple {
   color: rgb(118, 69, 217);
 }
+
 .c-white {
   color: white;
 }
+
 .backmenu {
   position: fixed;
   top: 0px;
@@ -64,9 +75,11 @@ body {
   pointer-events: initial;
   transition: all 0.5s ease-in;
 }
+
 .c {
   margin: 0 20px;
 }
+
 .my-modal {
   z-index: 100;
   position: fixed;
@@ -75,6 +88,7 @@ body {
   transform: translate(-50%, 0);
   width: 320px;
 }
+
 .my-modal .content {
   overflow: hidden;
   max-height: 100vh;
@@ -83,7 +97,8 @@ body {
   border: 1px solid rgb(231, 227, 235);
   border-radius: 32px;
 }
-.my-modal .content a {
+
+.my-modal .content a.wallet {
   margin-bottom: 24px;
   font-size: 14px;
   color: rgb(98, 54, 255);
@@ -92,7 +107,8 @@ body {
   text-align: center;
   display: block;
 }
-.my-modal .content > p {
+
+.my-modal .content>p {
   -webkit-box-align: center;
   align-items: center;
   background: transparent;
@@ -102,10 +118,12 @@ body {
   font-size: 20px;
   font-weight: 600;
 }
-.my-modal .content > div {
+
+.my-modal .content>div.wallet-select {
   padding: 24px;
 }
-.my-modal .content > div > div {
+
+.my-modal .content>div>div.wallet {
   -webkit-box-align: center;
   align-items: center;
   border: 0px;
@@ -129,4 +147,59 @@ body {
   color: rgb(98, 54, 255);
   width: 100%;
   margin-bottom: 8px;
+}
+
+.my-modal .stack {
+  padding: 24px;
+  padding-top: 0;
+}
+  .my-modal .stack>div>div {
+  display: flex;
+  margin: 7px 0;
+  align-items: center;
+  justify-content: space-between;
+}
+.my-modal .stack>div>div p {
+  font-size: 13px;
+  font-weight: 600;
+}
+.stack .max {
+  background: rgb(118, 69, 217);
+    border-radius: 50px;
+    padding: 7px 10px;
+    color: white;
+}
+.stack > p {
+  font-weight: 600;
+}
+.stack button {
+  height: auto;
+  width: auto;
+  padding: 13px 25px;
+  border-radius: 50px;
+
+}
+.stack button:not(.disable) {
+  border:2px solid rgb(118, 69, 217);
+  background-color: transparent;
+  color: rgb(118, 69, 217);
+}
+.stack button.disable{
+  color:#8c8c8c;
+  cursor: no-drop;
+}
+.stack a {
+  display: block;
+  margin-top: 20px;
+  text-decoration: none;
+  color: rgb(118, 69, 217);
+  font-size: 17px;
+  font-weight: 600;
+  text-align: center;
+}
+.stack div:first-child {
+  background-color: #f2f2f5;
+  padding: 5px 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
